@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-04-12T08:22:08Z",
+  "timestamp" : "2022-04-13T08:22:33Z",
   "count_outdated" : 1732,
   "uniques_outdated" : 315,
-  "count" : 1779,
-  "uniques" : 335,
+  "count" : 1780,
+  "uniques" : 336,
   "clones" : [
     {
       "timestamp": "2022-03-30T00:00:00Z",
@@ -60,6 +60,13 @@
       "count_minmax": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2022-04-13T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
