@@ -1,5 +1,5 @@
 {
-  "count": 47,
+  "count": 48,
   "uniques": 13,
   "clones": [
     {
@@ -39,6 +39,11 @@
     },
     {
       "timestamp": "2022-04-11T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-04-13T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
