@@ -1,3 +1,9 @@
+2022-04-13T08:22:33Z:
+* notice: last 14d: all unq: 48 13
+* notice: prev accum: outdated-all outdated-unq / all unq: 1732 315 / 1779 335
+* notice: next accum: outdated-all outdated-unq / all unq: 1732 315 / 1780 336
+* notice: prev json diff // prev day diff: unq all: +1 +1 / -0 -0 // +1 +1 / -0 -0
+
 2022-04-12T08:22:08Z:
 * notice: last 14d: all unq: 47 13
 * notice: prev accum: outdated-all outdated-unq / all unq: 1719 310 / 1767 331
